--- a/src/Trakx.Coinbase.Custody.ApiClient/Trakx.Coinbase.Custody.ApiClient.csproj
+++ b/src/Trakx.Coinbase.Custody.ApiClient/Trakx.Coinbase.Custody.ApiClient.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <GenerateApiClient>True</GenerateApiClient>
+    <GenerateApiClient>False</GenerateApiClient>
   </PropertyGroup>
 
   <Import Project="../Common.Projects.props" />
@@ -20,7 +20,7 @@
     <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="5.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.2" />
     <PackageReference Include="Polly.Contrib.WaitAndRetry" Version="1.1.1" />
-    <PackageReference Include="Trakx.Utils" Version="0.1.8" />
+    <PackageReference Include="Trakx.Utils" Version="0.1.13" />
     <PackageReference Include="NSwag.MSBuild" Version="13.9.4">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
